@@ -7,6 +7,9 @@
 	 * file_itunesdb.c: bugfix: tracks marked for deletion were
            not deleted from the iPod.
 
+	 * gtkpod.glade: added scrollbars for smart playlist
+           rules-view.
+
 2005-11-10 Jorg Schuler <jcsjcs@users.sourceforge.net>
 
 	 * moved mkdirhier() from file_export.c to misc.c
