@@ -12471,19 +12471,37 @@ for this filename.</property>
 		  <property name="shadow_type">GTK_SHADOW_ETCHED_OUT</property>
 
 		  <child>
-		    <widget class="GtkAlignment" id="spl_rules_table_align">
+		    <widget class="GtkScrolledWindow" id="scrolledwindow16">
 		      <property name="visible">True</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xscale">1</property>
-		      <property name="yscale">1</property>
-		      <property name="top_padding">5</property>
-		      <property name="bottom_padding">5</property>
-		      <property name="left_padding">5</property>
-		      <property name="right_padding">5</property>
+		      <property name="can_focus">True</property>
+		      <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+		      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+		      <property name="shadow_type">GTK_SHADOW_NONE</property>
+		      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 		      <child>
-			<placeholder/>
+			<widget class="GtkViewport" id="viewport10">
+			  <property name="visible">True</property>
+			  <property name="shadow_type">GTK_SHADOW_IN</property>
+
+			  <child>
+			    <widget class="GtkAlignment" id="spl_rules_table_align">
+			      <property name="visible">True</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xscale">1</property>
+			      <property name="yscale">1</property>
+			      <property name="top_padding">5</property>
+			      <property name="bottom_padding">5</property>
+			      <property name="left_padding">5</property>
+			      <property name="right_padding">5</property>
+
+			      <child>
+				<placeholder/>
+			      </child>
+			    </widget>
+			  </child>
+			</widget>
 		      </child>
 		    </widget>
 		  </child>
